tests/dfrouter/errors/detector_files/broken_detectors_file1d/errors.dfrouter
Error: Attribute 'pos' in definition of detectorDefinition 'MQ11Fs2' is not of type float.
Error: Process Error
Quitting (on error).
